// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateOperations > matches snapshot for post operations with nested fragments 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangen. Do not edit. */

import { queryOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	GetUserQuery,
	GetUserQueryVariables,
	ListUsersQuery,
	ListUsersQueryVariables,
	CreateUserMutation,
	CreateUserMutationVariables,
	UpdateUserMutation,
	UpdateUserMutationVariables,
	DeleteUserMutation,
	DeleteUserMutationVariables,
	GetPostsQuery,
	GetPostsQueryVariables,
	CreatePostMutation,
	CreatePostMutationVariables,
} from "./types"

// Fragment Documents
const UserFieldsFragmentDoc = /* GraphQL */ \`
fragment UserFields on User {
  id
  name
  email
  avatarUrl
  createdAt
}
\`

const PostFieldsFragmentDoc = /* GraphQL */ \`
fragment PostFields on Post {
  id
  title
  content
  published
  createdAt
  tags
}
\`

const PostWithAuthorFragmentDoc = /* GraphQL */ \`
fragment PostWithAuthor on Post {
  ...PostFields
  author {
    ...UserFields
  }
}
\`

// Documents & Operations
const GetUserDocument = /* GraphQL */ \`
query GetUser($id: ID!) {
  user(id: $id) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const getUserQueryOptions = (variables: GetUserQueryVariables) =>
	queryOptions({
		queryKey: ["GetUser", variables],
		queryFn: async () => (await getClient()).request<GetUserQuery>(GetUserDocument, variables ?? undefined),
	})

const ListUsersDocument = /* GraphQL */ \`
query ListUsers($limit: Int, $offset: Int) {
  users(limit: $limit, offset: $offset) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const listUsersQueryOptions = (variables?: ListUsersQueryVariables) =>
	queryOptions({
		queryKey: ["ListUsers", variables],
		queryFn: async () => (await getClient()).request<ListUsersQuery>(ListUsersDocument, variables ?? undefined),
	})

const CreateUserDocument = /* GraphQL */ \`
mutation CreateUser($input: CreateUserInput!) {
  createUser(input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const createUserMutationOptions = () => ({
	mutationKey: ["CreateUser"],
	mutationFn: async (variables: CreateUserMutationVariables) =>
		(await getClient()).request<CreateUserMutation>(CreateUserDocument, variables),
})

const UpdateUserDocument = /* GraphQL */ \`
mutation UpdateUser($id: ID!, $input: UpdateUserInput!) {
  updateUser(id: $id, input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const updateUserMutationOptions = () => ({
	mutationKey: ["UpdateUser"],
	mutationFn: async (variables: UpdateUserMutationVariables) =>
		(await getClient()).request<UpdateUserMutation>(UpdateUserDocument, variables),
})

const DeleteUserDocument = /* GraphQL */ \`
mutation DeleteUser($id: ID!) {
  deleteUser(id: $id)
}
\`

export const deleteUserMutationOptions = () => ({
	mutationKey: ["DeleteUser"],
	mutationFn: async (variables: DeleteUserMutationVariables) =>
		(await getClient()).request<DeleteUserMutation>(DeleteUserDocument, variables),
})

const GetPostsDocument = /* GraphQL */ \`
query GetPosts($authorId: ID) {
  posts(authorId: $authorId) {
    ...PostWithAuthor
  }
}
\` + PostFieldsFragmentDoc + UserFieldsFragmentDoc + PostWithAuthorFragmentDoc

export const getPostsQueryOptions = (variables?: GetPostsQueryVariables) =>
	queryOptions({
		queryKey: ["GetPosts", variables],
		queryFn: async () => (await getClient()).request<GetPostsQuery>(GetPostsDocument, variables ?? undefined),
	})

const CreatePostDocument = /* GraphQL */ \`
mutation CreatePost($input: CreatePostInput!) {
  createPost(input: $input) {
    ...PostFields
  }
}
\` + PostFieldsFragmentDoc

export const createPostMutationOptions = () => ({
	mutationKey: ["CreatePost"],
	mutationFn: async (variables: CreatePostMutationVariables) =>
		(await getClient()).request<CreatePostMutation>(CreatePostDocument, variables),
})
"
`;

exports[`generateOperations > matches snapshot for user operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangen. Do not edit. */

import { queryOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	GetUserQuery,
	GetUserQueryVariables,
	ListUsersQuery,
	ListUsersQueryVariables,
	CreateUserMutation,
	CreateUserMutationVariables,
	UpdateUserMutation,
	UpdateUserMutationVariables,
	DeleteUserMutation,
	DeleteUserMutationVariables,
} from "./types"

// Fragment Documents
const UserFieldsFragmentDoc = /* GraphQL */ \`
fragment UserFields on User {
  id
  name
  email
  avatarUrl
  createdAt
}
\`

// Documents & Operations
const GetUserDocument = /* GraphQL */ \`
query GetUser($id: ID!) {
  user(id: $id) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const getUserQueryOptions = (variables: GetUserQueryVariables) =>
	queryOptions({
		queryKey: ["GetUser", variables],
		queryFn: async () => (await getClient()).request<GetUserQuery>(GetUserDocument, variables ?? undefined),
	})

const ListUsersDocument = /* GraphQL */ \`
query ListUsers($limit: Int, $offset: Int) {
  users(limit: $limit, offset: $offset) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const listUsersQueryOptions = (variables?: ListUsersQueryVariables) =>
	queryOptions({
		queryKey: ["ListUsers", variables],
		queryFn: async () => (await getClient()).request<ListUsersQuery>(ListUsersDocument, variables ?? undefined),
	})

const CreateUserDocument = /* GraphQL */ \`
mutation CreateUser($input: CreateUserInput!) {
  createUser(input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const createUserMutationOptions = () => ({
	mutationKey: ["CreateUser"],
	mutationFn: async (variables: CreateUserMutationVariables) =>
		(await getClient()).request<CreateUserMutation>(CreateUserDocument, variables),
})

const UpdateUserDocument = /* GraphQL */ \`
mutation UpdateUser($id: ID!, $input: UpdateUserInput!) {
  updateUser(id: $id, input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const updateUserMutationOptions = () => ({
	mutationKey: ["UpdateUser"],
	mutationFn: async (variables: UpdateUserMutationVariables) =>
		(await getClient()).request<UpdateUserMutation>(UpdateUserDocument, variables),
})

const DeleteUserDocument = /* GraphQL */ \`
mutation DeleteUser($id: ID!) {
  deleteUser(id: $id)
}
\`

export const deleteUserMutationOptions = () => ({
	mutationKey: ["DeleteUser"],
	mutationFn: async (variables: DeleteUserMutationVariables) =>
		(await getClient()).request<DeleteUserMutation>(DeleteUserDocument, variables),
})
"
`;
